--- a/kde5/pacman-multilib.conf
+++ b/kde5/pacman-multilib.conf
@@ -68,7 +68,7 @@ LocalFileSigLevel = Optional
 
 [core]
 SigLevel = PackageRequired
-Server = http://mirror.netzspielplatz.de/manjaro/packages/unstable/$repo/$arch
+Server = http://mirror.dacentec.com/manjaro/unstable/$repo/$arch
 
 [manjaro-livecd-repo]
 SigLevel = Optional TrustAll
@@ -80,15 +80,15 @@ Server = file:///home/anex/build-01-12-15
 
 [extra]
 SigLevel = PackageRequired
-Server = http://mirror.netzspielplatz.de/manjaro/packages/unstable/$repo/$arch
+Server = http://mirror.dacentec.com/manjaro/unstable/$repo/$arch
 
 [community]
 SigLevel = PackageRequired
-Server = http://mirror.netzspielplatz.de/manjaro/packages/unstable/$repo/$arch
+Server = http://mirror.dacentec.com/manjaro/unstable/$repo/$arch
 
 # If you want to run 32 bit applications on your x86_64 system,
 # enable the multilib repositories as required here.
 
 [multilib]
 SigLevel = PackageRequired
-Server = http://mirror.netzspielplatz.de/manjaro/packages/unstable/$repo/$arch
+Server = http://mirror.dacentec.com/manjaro/unstable/$repo/$arch
