--- a/kde5/pacman-multilib.conf
+++ b/kde5/pacman-multilib.conf
@@ -70,11 +70,11 @@ LocalFileSigLevel = Optional
 SigLevel = PackageRequired
 Server = http://mirror.dacentec.com/manjaro/unstable/$repo/$arch
 
-[manjaro-livecd-repo]
+[calamares]
 SigLevel = Optional TrustAll
-Server = file:///home/anex/manjaro-livecd-repo
+Server = file:///home/anex/calamares-repo
 
-[kf5-apps]
+[plasma]
 SigLevel = Optional TrustAll
 Server = file:///home/anex/build-01-12-15
 
