--- a/shared/overlay-livecd/etc/sddm.conf
+++ b/shared/overlay-livecd/etc/sddm.conf
@@ -3,10 +3,10 @@
 Relogin=false
 
 # Autologin session
-Session=
+Session=plasma.desktop
 
 # Autologin user
-User=
+User=manjaro
 
 
 [General]
@@ -82,5 +82,3 @@ SessionDir=/usr/share/xsessions
 
 # Xauth path
 XauthPath=/usr/bin/xauth
-
-
